# Honours

./: data.ipynb  evaluation.ipynb  evaluation.py  pyproject.toml  training.py
LongPolicyQA/: LongPolicyQA.py  dataset_infos.json
