[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Liam Scott-Russell <liam.scott.russell@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datasets = "^2.4.0"
evaluate = "^0.2.2"
transformers = "^4.22.2"
torch = "^1.12.1"
scipy = "^1.9.1"
wandb = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
